💄(mail-merge): Fix alignment and height of tokens

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -487,6 +487,7 @@ body.platform-win32 {
   left: 0;
   width: 100%;
   height: 0;
+  line-height: 1.4; // must match contenteditable container
   overflow: visible;
   z-index: 10;
 }
